# python-hostname

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  hatch.toml  hostname.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-testing.txt  ruff.toml  test_hostname.py
.github/workflows/: docs.yaml  lint.yaml  test.yml
docs/source/: conf.py  exceptions.rst  index.rst  overview.rst  standards.rst  underscore.rst  usage.rst
hostname/: __about__.py  __init__.py  exception.py  hostname.py  name.py
tests/: test_hostname.py
