[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hostname"
description = "A syntactic validator for Internet hostnames"
dynamic = ["version"]
requires-python = ">=3.11"
authors = [
    {name = "Jeffrey Goldberg", email = "jeffrey@goldmark.org"}
]
readme = "README.md"
license = {text = "MIT License"}
dependencies = [
    "dnspython",
    "idna",
]

[project.urls]
Repository = "https://github.com/jpgoldberg/python-hostname"


# [tool.hatch]
# hatchling configuration is in hatch.toml

[tool.black]
target-version = ["py311", "py312"]
line-length = 120
skip-string-normalization = true

# [tool.ruff]
# ruff configuration is in ruff.ini


[tool.coverage.run]
source_pkgs = ["hostname", "tests"]
branch = true
parallel = true
omit = [
  "*/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
