[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hostname"
description = "A syntactic validator for Internet hostnames"
dynamic = ["version"]
requires-python = ">=3.11"
authors = [
    {name = "Jeffrey Goldberg", email = "jeffrey@goldmark.org"}
]
readme = "README.md"
license = {text = "MIT License"}
dependencies = [
    "dnspython",
    "idna",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",

  "Intended Audience :: Developers",
  "Operating System :: OS Independent",

  "Topic :: Internet",
  "Topic :: Utilities",

  "Typing :: Typed",
]

[project.urls]
Source = "https://github.com/jpgoldberg/python-hostname"
Issues = "https://github.com/jpgoldberg/python-hostname/issues"
Documentation = "https://jpgoldberg.github.io/python-hostname/"
Changelog = "https://github.com/jpgoldberg/python-hostname/blob/main/CHANGELOG.md"

# [tool.hatch]
# hatchling configuration is in hatch.toml

[tool.black]
target-version = ["py311", "py312"]
line-length = 79
skip-string-normalization = true

# [tool.ruff]
# ruff configuration is in ruff.ini


[tool.coverage.run]
source_pkgs = ["hostname", "tests"]
branch = true
parallel = true
omit = [
  "*/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
